kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-app
  labels:
    app.kubernetes.io/part-of: frontend-app
  annotations:
    prometheus.io/port: "front-metric"
    prometheus.io/scrape: "true"
spec:
  selector:
    app: frontend-app
  ports:
    - name: front-metric
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
