kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-status
spec:
  rules:
  - host: a97efae2bdcd44e47ba816cf88052c88-599848173.eu-west-2.elb.amazonaws.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-app
            port:
              number: 80
  ingressClassName: nginx
